<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:clipChildren="false"
                                             tools:context=".activities.StandardUIActivity"
                                             tools:layout_editor_absoluteX="0dp"
                                             tools:layout_editor_absoluteY="0dp">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottom_bar_height"
        app:itemBackground="@color/color_primary"
        app:itemIconTint="@color/text_primary"
        app:itemTextColor="@color/text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/main_navigation_items"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:clipChildren="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/fabCoordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="11dp"
            android:layout_marginStart="11dp"
            android:clipChildren="false"
            android:orientation="vertical"
            app:layout_behavior="com.adsamcik.signalcollector.utility.BottomBarBehaviorStandard">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:clipChildren="false">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabTwo"
                    android:layout_width="@dimen/fab_size"
                    android:layout_height="@dimen/fab_size"
                    android:layout_gravity="bottom|center"
                    android:clipChildren="false"
                    android:tint="@color/color_accent"
                    app:backgroundTint="@color/text_primary"
                    app:borderWidth="0dp"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_marginBottom="-13.5dp"
                    android:layout_marginStart="-8.5dp"
                    android:indeterminate="true"
                    android:indeterminateOnly="false"
                    android:indeterminateTint="@color/color_accent"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular"
                    android:progressTint="@color/color_accent"
                    android:rotation="-90"
                    android:translationZ="2dp"
                    android:visibility="gone"
                    app:layout_anchor="@id/fabTwo"
                    app:layout_anchorGravity="center"/>

            </android.support.design.widget.CoordinatorLayout>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabOne"
                android:layout_width="@dimen/fab_size"
                android:layout_height="@dimen/fab_size"
                android:layout_gravity="center"
                app:borderWidth="0dp"
                app:layout_behavior="com.adsamcik.signalcollector.utility.BottomBarBehavior"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>
