<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:id="@+id/container_map"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:animateLayoutChanges="true"
                                             android:focusable="true"
                                             android:focusableInTouchMode="true">

...
            android:layout_height="48dp"
            android:background="@color/cardview_light_background"
            android:elevation="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_map_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/map_search"
                android:imeOptions="actionSearch"
...
