<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/activity_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_no_play_services"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/primary_text_size"/>
</LinearLayout>